# jsonconfig

./: README.md  pyproject.toml
jsonconfig/: __init__.py  main.py
tests/: test_jsonconfig.py
