[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonconfig"
version = "0.1.0"
description = "Read and write JSON configuration files. Comments and control characters are removed during parsing and are not preserved. Also supports automatic type conversion for numeric strings."
authors = [
    { name = "Fredrik Larsson", email = "ekerim@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]
